fixed navbar on narrow screens

--- a/files/style.css
+++ b/files/style.css
@@ -110,6 +110,23 @@ nav a:hover {
     background-color: var(--navBarHoverColor);
 }
 
+@media all and (max-width: 750px) {
+    nav {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        border-bottom: 4px solid var(--navBarColor);
+    }
+    #navBar {
+        background-color: rgb(0, 0, 0);
+        top: 0;
+        position: relative;
+        z-index: 1;
+        white-space: nowrap;
+    }
+}
+
 h1 {
     font-size: 1.5rem;
     text-align: center;
